Cooper - same dashboards now

--- a/public/css/UpdatedDashboard.css
+++ b/public/css/UpdatedDashboard.css
@@ -84,7 +84,7 @@ form{
 #hold{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 50%;
 }
@@ -99,4 +99,14 @@ form{
     box-shadow: 5px 5px 10px rgb(240, 110, 245);
     width: 20%;
     height: 100%;
+}
+.boxed{
+    border-color: 1px solid black;
+  border-radius: 10px;
+  background-color: rgba(248, 100, 236, 0.2);
+  border: #000 1px solid;
+  box-shadow: 5px 5px 10px rgba(248, 100, 236, 0.2);
+  padding: 20px;
+  display: flex;
+  justify-content: center;
 }
