--- a/public/css/UpdatedDashboard.css
+++ b/public/css/UpdatedDashboard.css
@@ -3,8 +3,8 @@ body{
 }
 .scene{
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: radial-gradient(circle at 50% 90%, #ff6b6b, #ffb6c1, #87ceeb);
     z-index: -1;
 }
@@ -79,7 +79,7 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 60px;
 }
 #hold{
     display: flex;
@@ -87,6 +87,7 @@ form{
     justify-content: space-around;
     align-items: center;
     height: 50%;
+    margin-top: 50px;
 }
 .btn-con{
     display: flex;
@@ -99,4 +100,60 @@ form{
     box-shadow: 5px 5px 10px rgb(240, 110, 245);
     width: 20%;
     height: 100%;
+}
+
+header {
+    background-color: rgba(134, 184, 224, 0.2);
+    color: #fff;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    z-index: 3;
+    margin-bottom: 40px;
+  }
+
+  .user-dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .user-dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .nohead{
+    height: 70px;
+    display: flex;
+  }
+  #btn2{
+    background-color: rgba(134, 184, 224, 0.2);  
+    border: white 1px solid;
+    padding: 10px;
+    border-radius: 3px;
+    color: white;
+}
+#btn2:hover{
+    background-color:  rgba(134, 184, 224, 0.7);
+    box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
 }
