--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,174 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-      body {
-        margin: 0;
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: -1;
-      }
-
-      .scene {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
-        background: radial-gradient(circle at 50% 50%, #ff6b6b, #ffb6c1, #87ceeb);
-        z-index: -1;
-      }
-
-      .sun {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%, 50%);
-        width: 150px;
-        height: 150px;
-        background: radial-gradient(circle at 50% 50%, #ffd700, transparent);
-        border-radius: 50%;
-        animation: ripple 3s infinite ease-in-out;
-        z-index: -2;
-      }
-
-      .water {
-        position: absolute;
-        width: 100%;
-        height: 5%;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(255, 255, 255, .1);
-        overflow: hidden;
-        box-shadow: inset 0 1px 4px -3px white;
-        z-index: -2;
-      }
-
-      @keyframes ripple {
-        0% {
-          box-shadow: 0 0 0 0px rgba(255, 215, 0, 0.7);
-        }
-        50% {
-          box-shadow: 0 0 0 50px rgba(255, 215, 0, 0);
-        }
-        100% {
-          box-shadow: 0 0 0 0px rgba(255, 215, 0, 0.7);
-        }
-      }
-
-h1,
-h2,
-button {
-  position: relative;
-  display:flex;
-  z-index: 3; /* Set a higher z-index for other elements */
-  margin-top: 0px;
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
-#btn1:hover{
-  background-color:  rgba(134, 184, 224, 0.7);
-  box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
+
+.scene {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  background-color: #001f3f; /* Dark blue sky color */
+  z-index: -1;
 }
-  .hold{
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      flex-direction: row;
-      border-color: 1px solid black;
-      padding-left:30px;
-      border-radius: 10px;
-      background-color: rgba(134, 184, 224, 0.2);
-      border: #000 1px solid;
-      box-shadow: 5px 5px 10px rgb(240, 110, 245);
-      width: 20%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: left;
-      margin-left: 30px;
-      height: 60%;
-    }
-    /*Start Patient dashboard style*/
-    .holdcenter{
-      margin: 0px auto;
-      width: fit-content;
-      height: fit-content;
-    }
-    .hold input{
-      display: block;
-      margin-top: 20px;
-      background-color: #ecc4c4;
-      border-radius: 3px;
-      border: 1px solid #000;
-    }
-    .hold button{
-      width: 15%;
-      height: 40px;
-      border: 2px solid black;
-      border-radius: 5px;
-      background-color: transparent;
-      color: black; 
-      font-size: 20px; 
-      text-shadow: h-shadow v-shadow blur-radius color;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-    .hold button:hover{
-      background-color:  rgba(134, 184, 224, 0.7);
-      box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
-    }
-    #patientsHomeTable{
-      margin: 10px 10px;
-    }
-    #titleRow{
-      border-bottom: 2px solid #000;
-    }
-    .patientRow{
-      display: block;
-      border-bottom: 1px solid #666;
-      margin-bottom: 10px;
-    }
-    .rowData{
-      width: 9%;
-    }
-    /*End Patient dashboard style*/
-    #btn1{
-    width: 85%;
-      height: 90px;
-      border: 2px solid black;
-      border-radius: 5px;
-      background-color: transparent;
-      color: black; 
-      font-size: 20px; 
-      text-shadow: h-shadow v-shadow blur-radius color;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-    .hold2{
-        display: flex;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-content: center;
-        flex-direction: row;
-    }
-    .hold3{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    padding-top: 30px;
-    
-    }
-    .boxed{
-        border-color: 1px solid black;
-      border-radius: 10px;
-      background-color: rgba(248, 100, 236, 0.2);
-      border: #000 1px solid;
-      box-shadow: 5px 5px 10px rgba(248, 100, 236, 0.2);
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-    }
+
+.moon {
+  width: 150px;
+  height: 150px;
+  background-color: #f0f0f0; /* Moon color */
+  border-radius: 50%;
+  position: absolute;
+  top: 67vh;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 0 50px 10px #f0f0f0;
+  z-index: -2;
+}
+
+.ocean {
+  width: 100%;
+  height: 15vh;
+  background-color: rgba(255, 255, 255, .1);
+  position: absolute;
+  bottom: 0;
+  z-index: -2;
+}
+
+.stars {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -2;
+}
+
+.star {
+  width: 3px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  animation: ripple 5s infinite;
+  z-index: -2;
+
+}
+
+@keyframes ripple {
+  0% { transform: scale(1); opacity: 0.5; }
+  50% { transform: scale(2); opacity: 0; }
+  100% { transform: scale(1); opacity: 0.5; }
+}
+
+#container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#font1{
+  font-size: 20px;
+}
+
+#textbox{
+height: 30px;
+width: 300px;
+border-radius: 5px;
+}
