--- a/public/css/adminreport.css
+++ b/public/css/adminreport.css
@@ -1,14 +1,14 @@
 body{
     margin: 0px;
-}
-.scene{
+  }
+  .scene{
     position: absolute;
     width: 100%;
     height: 100%;
     background: radial-gradient(circle at 50% 90%, #ff6b6b, #ffb6c1, #87ceeb);
     z-index: -1;
-}
-.sun {
+  }
+  .sun {
     position: absolute;
     bottom: 10%;
     left: 50%;
@@ -19,8 +19,8 @@ body{
     border-radius: 50%;
     animation: ripple 3s infinite ease-in-out;
     z-index: -2;
-}
-.water {
+  }
+  .water {
     position: absolute;
     width: 100%;
     height: 5%;
@@ -31,8 +31,8 @@ body{
     overflow: hidden;
     box-shadow: inset 0 1px 4px -3px white;
     z-index: -2;
-}
-@keyframes ripple {
+  }
+  @keyframes ripple {
     0% {
     box-shadow: 0 0 0 0px rgba(255, 215, 0, 0.7);
     }
@@ -42,23 +42,16 @@ body{
     100% {
     box-shadow: 0 0 0 0px rgba(255, 215, 0, 0.7);
     }
-} 
-#container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-form{
+  } 
+
+  form{
     width: 80%;
     display: flex;
-    height: 300px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-.btn1{
+  }
+  .btn1{
     width: 85%;
     height: 90px;
     border: 2px solid black;
@@ -72,39 +65,20 @@ form{
     align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
-}
-.btn1:hover{
+  }
+  .btn1:hover{
     background-color:  rgba(134, 184, 224, 0.7);
     box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
-}   
-.banner{
+  }   
+  .banner{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 60px;
-}
-#hold{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 50%;
-    margin-top: 50px;
-}
-.btn-con{
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(134, 184, 224, 0.2);
-    border: #000 1px solid;
-    box-shadow: 5px 5px 10px rgb(240, 110, 245);
-    width: 20%;
-    height: 100%;
-}
-
-header {
+  }
+ 
+  
+  header {
     background-color: rgba(134, 184, 224, 0.2);
     color: #fff;
     width: 100%;
@@ -115,12 +89,12 @@ header {
     z-index: 3;
     margin-bottom: 40px;
   }
-
+  
   .user-dropdown {
     position: relative;
     display: inline-block;
   }
-
+  
   .dropdown-content {
     display: none;
     position: absolute;
@@ -129,18 +103,18 @@ header {
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 2;
   }
-
+  
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
-
+  
   .dropdown-content a:hover {
     background-color: #f1f1f1;
   }
-
+  
   .user-dropdown:hover .dropdown-content {
     display: block;
   }
@@ -152,17 +126,27 @@ header {
     flex-direction: row;
   }
   #btn2{
-    background-color: rgba(134, 184, 224, 0.2);  
-    border: white 1px solid;
-    padding: 10px;
-    border-radius: 3px;
-    color: white;
-}
-#btn2:hover{
+    width: 100%;
+    height: 90px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: transparent;
+    color: black; 
+    font-size: 20px; 
+    text-shadow: h-shadow v-shadow blur-radius color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    padding-left: 95px;
+    padding-right: 95px;
+  }
+  #btn2:hover{
     background-color:  rgba(134, 184, 224, 0.7);
     box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
-}
-.boxed{
+  }
+  .boxed{
     border-color: 1px solid black;
   border-radius: 10px;
   background-color: rgba(248, 100, 236, 0.2);
@@ -171,6 +155,70 @@ header {
   padding: 20px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
+  }
+  #textbox{
+    margin-top: 20px;
+    height: 30px;
+    width: 250px;
+    border-radius: 5px;
+    }
+    .btn-con1{
+    float: left;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(134, 184, 224, 0.2);
+    border: #000 1px solid;
+    box-shadow: 5px 5px 10px rgb(240, 110, 245);
+    width: 15%;
+    height: 300px;
+  }
+  .btn-con2{
+    float: right;
+    display: flex;
+    border-radius: 10px;
+    justify-content: center;
+    align-items:center;
+    flex-direction: row;
+    background-color: rgba(134, 184, 224, 0.2);
+    border: #000 1px solid;
+    box-shadow: 5px 5px 10px rgb(240, 110, 245);
+    width: 30%;
+    height: fit-content;
+    padding-left: 20px ;
+    padding-top: 25px ;
+    padding-bottom: 25px;
+    padding-right: 20px;
+  } 
+  
+  
+  #tag1{
+    float: left;
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+  }
+  #tag2{
+    float: right;
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content:center; 
+  }
+  #hold1{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+  }
+ 
+  #container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
