--- a/public/css/addcss.css
+++ b/public/css/addcss.css
@@ -185,3 +185,65 @@ justify-content: center;
   width: 300px;
   border-radius: 5px;
   }
+  #hold2get{
+    display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 50%;
+  margin-top: 50px;
+  }
+  .btn-pay{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgba(134, 184, 224, 0.2);
+    border: #000 1px solid;
+    box-shadow: 5px 5px 10px rgb(240, 110, 245);
+    width: 20%;
+    height: 470px;
+  }
+  #btn-pay{
+    width: 100%;
+    height: 40px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: transparent;
+    color: black; 
+    font-size: 20px; 
+    text-shadow: h-shadow v-shadow blur-radius color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #btn-pay:hover{
+    background-color:  rgba(134, 184, 224, 0.7);
+    box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
+  }
+  #btn-pay2{
+    width: 100%;
+    height: 40px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: transparent;
+    color: black; 
+    font-size: 20px; 
+    text-shadow: h-shadow v-shadow blur-radius color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  #btn-pay2:hover{
+    background-color:  rgba(134, 184, 224, 0.7);
+    box-shadow: 5px 5px 10px rgba(134, 184, 224, 0.7);
+  }
+  #sppad{
+    padding-top: 20px;
+  }
