--- a/public/css/UpdatedDashboard.css
+++ b/public/css/UpdatedDashboard.css
@@ -127,7 +127,6 @@ header {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 2;
   }
@@ -139,12 +138,9 @@ header {
     display: block;
   }
 
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-
   .user-dropdown:hover .dropdown-content {
     display: block;
+    background-color: transparent;
   }
   .nohead{
     height: 70px;
@@ -175,4 +171,18 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+#Logout{
+    width: 100px;
+    Height: 35px;
+    border-radius: 7px;
+}
+
+#logout-btn{
+  width: 100%;
+  height: 100%;
+  background-color: lightblue;
+  border: 1px solid black;
+  border-radius: 7px;
 }
